# OrgAn

./: .gitignore  LICENSE  README.md  README_test.md  env.yml  example_smiles.csv  pyproject.toml  report.ipynb  report_inwork.ipynb
data/: data.csv  data_old.csv  name_smiles.csv  smiles_only.csv
pubchem_requests/: pchem_rq.py
report/: data_example.csv  report.ipynb
src/OrgAn/: __init__.py  chromato.py  functions.py  pchem_rq.py
src/ppchem-project/: chromato.py  core.py  functions.py  pchem_rq.py
tests/: test_chromato.py  test_data.csv  test_functions.py  test_pchem_rq.py  test_smiles.csv
