[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "organ-chem" #change name
version = "1.0.0"
authors = [
    { name="Bastien Pinsard", email="bastien.pinsard@epfl.ch"},
    { name="Johan Schmidt", email="johan.schmidt@epfl.ch"},
    { name="Raphaël Tisseyre", email="raphael.tisseyre@epfl.ch"}
]
description = "A Python package for retrieving, organizing, and analyzing molecular properties from SMILES representations, using PubChem, RDKit, Pandas, and Morfeus."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "rdkit",
    "pandas",
    "numpy",
    "matplotlib",
    "morfeus-ml"
]

[tool.hatch.build.targets.wheel]
packages= ["src/OrgAn"]